--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Coming soon...
+<html>
+  <head></head>
+  <body style="background:black;">
+    <h1><img style="display: block;margin-left:auto;margin-right:auto;margin-top:50px;"
+      src="Broduo Logo.png"/></h1>
+    <h2 style="color:white;text-align:center;font-size:350%;">Coming soon...</h2>
+  </body>
+</html>
+
