Small css changes and added a title/favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-  <head></head>
+  <head><title>Broduo Software</title></head>
+  <link rel="icon" type="image/png" href="favicon-32x32.png"/>
   <body style="background:black;">
-    <h1><img style="display: block;margin-left:auto;margin-right:auto;margin-top:50px;"
+    <h1><img style="display:block;margin-left:auto;margin-right:auto;margin-top:50px;"
       src="Broduo Logo.png"/></h1>
     <h2 style="color:white;text-align:center;font-size:350%;">Coming soon...</h2>
   </body>
