Added a copyright notice. Added an alt image.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head><title>Broduo Software</title></head>
   <link rel="icon" type="image/png" href="favicon-32x32.png"/>
-  <body style="background:black;">
-    <h1><img style="display:block;margin-left:auto;margin-right:auto;margin-top:50px;"
-      src="Broduo Logo.png"/></h1>
-    <h2 style="color:white;text-align:center;font-size:350%;">Coming soon...</h2>
+  <body style="background:black">
+    <h1><img style="display:block;margin-left:auto;margin-right:auto;margin-top:50px"
+      src="Broduo Logo.png" alt="Broduo Software"/></h1>
+    <h2 style="color:white;text-align:center;font-size:350%">Coming soon...</h2>
+    <footer style="color:white;text-align:center;position:absolute;bottom:0;width:99%;margin-bottom:2px">
+      Copyright &copy; 2016-2017 Jeremy Blain, Julien Blain</footer>
   </body>
 </html>
 
